--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Assets/AssetStoreTools*
 
 # TextMesh Pro files
 [Aa]ssets/TextMesh*Pro/
+[Aa]ssets/TextMesh*Pro.meta
 
 # ============= #
 # IDE generated #
