--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,23 +1,17 @@
 {
   "dependencies": {
-    "com.coffee.git-dependency-resolver": "https://github.com/mob-sakai/GitDependencyResolverForUnity.git",
-    "com.coffee.upm-git-extension": "https://github.com/mob-sakai/UpmGitExtension.git",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "3.4.4",
+    "com.unity.ads": "3.4.5",
     "com.unity.analytics": "3.3.5",
-    "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
-    "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.purchasing": "2.0.6",
-    "com.unity.test-framework": "1.1.13",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.12",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.3",
-    "com.worldreaver.unirx": "git+https://github.com/worldreaver/UniRx#7.1.1",
-    "com.worldreaver.unitask": "git+https://github.com/worldreaver/UniTask#upm",
     "com.worldreaver.utility": "git+https://github.com/worldreaver/Utility#upm",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -52,25 +46,17 @@
     "com.unity.modules.xr": "1.0.0"
   },
   "lock": {
-    "com.coffee.git-dependency-resolver": {
+    "com.neuecc.unirx": {
       "revision": "HEAD",
-      "hash": "ae314c58c394b287315372cae1195f8858715e66"
-    },
-    "com.coffee.upm-git-extension": {
-      "revision": "HEAD",
-      "hash": "aa9f6ea79913e7e2749edea528c42f2f700ac401"
-    },
-    "com.worldreaver.unirx": {
-      "revision": "7.1.1",
-      "hash": "05b8b1ac0001c6547f8f62e1c6b406300fc4e699"
-    },
-    "com.worldreaver.unitask": {
-      "revision": "upm",
-      "hash": "43b394371bbdc2bec0d1df8b2f06eeaa1cc4ef2e"
+      "hash": "284d5c50d3f1ddd9fa7df3d382ea904732a9c2ff"
     },
     "com.worldreaver.utility": {
       "revision": "upm",
       "hash": "923adbd87dcd484e6f6138e3205bd7b9917b5fae"
+    },
+    "com.cysharp.unitask": {
+      "revision": "HEAD",
+      "hash": "c1f75d9ebd92de83b05ab8e872eb7176f45d2b0d"
     }
   }
 }
