--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "yenmoc <phongsoyenmoc.diep@gmail.com> (https://github.com/phongsoyenmoc)",
   "license": "MIT",
   "dependencies": {
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
-    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
-    "com.worldreaver.utility": "https://github.com/worldreaver/Utility.git?path=Assets/Root"
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.0.23",
+    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts#7.1.0",
+    "com.worldreaver.utility": "https://github.com/worldreaver/Utility.git?path=Assets/Root#1.3.1"
   },
   "repository": {
     "type": "git",
